data/derived/fa15/progs/unify/prog0806.ml.out
Characters 71-72:
  | h::t -> h n + sumList t xs;;
                          ^
Error: This expression has type ('a -> int) list
       but an expression was expected of type 'a
       The type variable 'a occurs inside ('a -> int) list
